# PLCStarter

./: .gitignore  CMakeLists.txt  build_all.sh  install.py  linux_build_boost.sh  starter.config
docs/: messages.md
src/: App_builder.cpp  App_builder.hpp  App_controler.cpp  App_controler.hpp  PLCServer.cpp  PLCServer.h  PLC_IO_bridge.cpp  PLC_IO_bridge.hpp  PLC_IO_data.hpp  PLC_IO_module_data.hpp  Server.h  Starter.cpp  StarterConfig.cpp  StarterConfig.h  TestApp.cpp  gpio.hpp  thread.h
src/user_app/: PLC_app.cpp  PLC_app.hpp  TestApp.cpp
test/: client.js
userAppRoot/root/: build.conf  file1.cpp  main.cpp
